Formatted with prettier.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,15 +2,15 @@ site_name: Recipe Book
 site_url: https://Jones-Good-Ass-Recipe-book.com
 use_directory_urls: false
 nav:
-  - Home: 'index.md'
-  - All Recipes: 'all_recipes.md'
-  - Tags: 'tags.md'
+    - Home: "index.md"
+    - All Recipes: "all_recipes.md"
+    - Tags: "tags.md"
 theme: journal
-extra_css: 
-  - style.min.css
+extra_css:
+    - style.min.css
 markdown_extensions:
-  - pymdownx.extra
-  - pymdownx.details
-  - pymdownx.tasklist:
-      custom_checkbox: true
-      clickable_checkbox: true
+    - pymdownx.extra
+    - pymdownx.details
+    - pymdownx.tasklist:
+          custom_checkbox: true
+          clickable_checkbox: true
