--- a/recipes/icebox_rools.yml
+++ b/recipes/icebox_rools.yml
@@ -44,4 +44,4 @@ steps:
   - Put the dough into a greased bowl. If doing this the day before, then you can put it in the fridge to rise slowly overnight. Alternatively, you can let it rise at room temperature for ~2.5 hours. 
   - About 1.5 hours before baking, shape into rolls and place on a baking sheet. The cut rolls are about 1.5 inches high. Avoid twisting or pinching the dough as much as possible, as they will rise better. Let rise ~1.5 hours. Note, the original recipe calls for this to be done 2 hours before, but the time I watched Ellen make them, it was ~1.5 hours.
   - Bake at 350 for 20 minutes.
-  - Brush the tops with butter.
+  - Brush the tops with butter after they come out of the oven.
