Adding some tags.

--- a/recipes/meat_balls_and_cabbage.yml
+++ b/recipes/meat_balls_and_cabbage.yml
@@ -44,3 +44,7 @@ steps:
   - Pour tomato soup and water over the cabbage and meatballs.
   - Cover and simmer on low for about an hour. Check occasionally to make sure it is not sticking to the pot.
   - Serve with soda crackers or rye bread.
+tags:
+  - Region/Poland
+  - Polish
+  - Entrees
