--- a/recipes/icebox_rools.yml
+++ b/recipes/icebox_rools.yml
@@ -45,3 +45,5 @@ steps:
   - About 1.5 hours before baking, shape into rolls and place on a baking sheet. The cut rolls are about 1.5 inches high. Avoid twisting or pinching the dough as much as possible, as they will rise better. Let rise ~1.5 hours. Note, the original recipe calls for this to be done 2 hours before, but the time I watched Ellen make them, it was ~1.5 hours.
   - Bake at 350 for 20 minutes.
   - Brush the tops with butter after they come out of the oven.
+tags:
+  - bakery
